--- a/ogma.cabal
+++ b/ogma.cabal
@@ -23,6 +23,9 @@ source-repository head
   location: https://github.com/AugmenTab/ogma
 
 library
+  exposed-modules:
+      Ogma
+      Ogma.Language.Language
   other-modules:
       Paths_ogma
   autogen-modules:
