Sources a larger list of languages
This sources languages from a list that includes all ISO 639-3
language codes. This gives us a larger list of base languages to
offer - approximately 14x as many. Since BCP-47 supports using any
ISO 639-3 code, this should let us cover all possibilities.

--- a/ogma.cabal
+++ b/ogma.cabal
@@ -25,7 +25,7 @@ source-repository head
 library
   exposed-modules:
       Ogma
-      Ogma.Language.Language
+      Ogma.Internal.Language
   other-modules:
       Paths_ogma
   autogen-modules:
