Adds function providing unicode character set for a given Script
There is also some work done in here to rename some ISO 639
functions, correct an issue with the caching where the first table
was selected even if it wasn't one we wanted, and adding a function
to provide the script type (which was dropped mid-way and will be
picked back up eventually).

--- a/ogma.cabal
+++ b/ogma.cabal
@@ -32,6 +32,7 @@ library
       Ogma.Internal.Script.ISO_15924_Code
       Ogma.Internal.Script.ISO_15924_Number
       Ogma.Internal.Script.Script
+      Ogma.Internal.Script.UnicodeRange
   other-modules:
       Paths_ogma
   autogen-modules:
