Adds BCP-47 code type
This type is the bread and butter of what Ogma intends to offer:
a way to write fully spec-compliant BCP-47 codes in a type-safe
way by leveraging Haskell's type system to check the code's
validity at compile-time, not at runtime.

--- a/ogma.cabal
+++ b/ogma.cabal
@@ -25,6 +25,7 @@ source-repository head
 library
   exposed-modules:
       Ogma
+      Ogma.BCP_47
       Ogma.Internal.Language.ISO_639_1
       Ogma.Internal.Language.ISO_639_2
       Ogma.Internal.Language.ISO_639_3
