Adds modules for language name and endonym
This may be revisted to attempt parsing the language page
itself, but given that the layout of the table on those
pages is less consistent than hoped, that may not be
possible.

--- a/ogma.cabal
+++ b/ogma.cabal
@@ -26,10 +26,14 @@ library
   exposed-modules:
       Ogma
       Ogma.BCP_47
+      Ogma.Internal.Language.Endonym
       Ogma.Internal.Language.ISO_639_1
       Ogma.Internal.Language.ISO_639_2
       Ogma.Internal.Language.ISO_639_3
       Ogma.Internal.Language.Language
+      Ogma.Internal.Language.Name
+      Ogma.Internal.Language.Scope
+      Ogma.Internal.Language.Type
       Ogma.Internal.Script.ISO_15924_Code
       Ogma.Internal.Script.ISO_15924_Number
       Ogma.Internal.Script.Script
