Generates Language type from IANA subtag registry
This adds an executable that fetches the latest version of the
IANA subtag registry and parses it for languages. Each language is
then turned into a constructor for a `Language` ADT, converted to
name bytes and text, and convert to and from ISO 639 code bytes
and text; all this is done in generated code produced by the new
executable.

This fundamentally returns us to the previous state of Ogma, but
with a more reliable and accurate source for BCP-47 supported
language data.

--- a/package.yaml
+++ b/package.yaml
@@ -10,7 +10,6 @@ language: Haskell2010
 
 extra-source-files:
   - README.md
-  - data/**
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -27,6 +26,7 @@ default-extensions:
 dependencies:
   - base
   - bytestring
+  - string-interpolate
   - text
 
 ghc-options:
@@ -52,6 +52,14 @@ executables:
     ghc-options: -Wall
     dependencies:
       - base
+      - bytestring
+      - containers
+      - directory
+      - filepath
+      - http-conduit
+      - http-types
+      - text
+      - unicode-transforms
 
 tests:
   ogma-test:
