--- a/ogma.cabal
+++ b/ogma.cabal
@@ -17,7 +17,6 @@ license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
-    data/language-subtag-registry.txt
 
 source-repository head
   type: git
@@ -28,6 +27,11 @@ library
       Ogma
   other-modules:
       Ogma.BCP_47
+      Ogma.Language
+      Ogma.Language.Language
+      Ogma.Language.LanguageFromISO639
+      Ogma.Language.LanguageName
+      Ogma.Language.LanguageToISO639
       Paths_ogma
   autogen-modules:
       Paths_ogma
@@ -39,12 +43,16 @@ library
   build-depends:
       base
     , bytestring
+    , string-interpolate
     , text
   default-language: Haskell2010
 
 executable ogma-gen
   main-is: Main.hs
   other-modules:
+      Generate.Language
+      Subtags.Sanitize
+      Subtags.Subtag
       Paths_ogma
   autogen-modules:
       Paths_ogma
@@ -56,7 +64,14 @@ executable ogma-gen
   build-depends:
       base
     , bytestring
+    , containers
+    , directory
+    , filepath
+    , http-conduit
+    , http-types
+    , string-interpolate
     , text
+    , unicode-transforms
   default-language: Haskell2010
 
 test-suite ogma-test
@@ -75,5 +90,6 @@ test-suite ogma-test
       base
     , bytestring
     , ogma
+    , string-interpolate
     , text
   default-language: Haskell2010
