--- a/scripts/build
+++ b/scripts/build
@@ -8,9 +8,8 @@ echo "=============================="
 echo "====== Generating  Ogma ======"
 echo "=============================="
 
-stack build ogma:ogma-gen --fast "$@"
-rm -r ./src/Ogma/Generated
-stack run ogma:ogma-gen
+stack build ogma:ogma-gen --only-dependencies --fast "$@"
+stack exec ogma-gen
 
 echo "============================"
 echo "====== Building  Ogma ======"
