--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 services:
   html:
-    image: ghcr.io/flipstone/haskell-tools:debian-stable-ghc-9.6.6-2024-12-10-9810a49
+    image: ghcr.io/flipstone/haskell-tools:debian-ghc-9.10.3-b5fe85f
     volumes:
       - .:${PROJECT_DIR}
       - launchpad_stack_root:/stack-root
