--- a/package.yaml
+++ b/package.yaml
@@ -56,6 +56,7 @@ executables:
       - containers
       - directory
       - filepath
+      - http-client
       - http-conduit
       - http-types
       - text
