--- a/ogma.cabal
+++ b/ogma.cabal
@@ -5,7 +5,7 @@ cabal-version: 2.2
 -- see: https://github.com/sol/hpack
 
 name:           ogma
-version:        0.1.0.0
+version:        0.1.0.1
 description:    Please see the README on GitHub at <https://github.com/AugmenTab/ogma#readme>
 homepage:       https://github.com/AugmenTab/ogma#readme
 bug-reports:    https://github.com/AugmenTab/ogma/issues
@@ -43,6 +43,7 @@ library
   build-depends:
       base
     , bytestring
+    , hashable
     , string-interpolate
     , text
   default-language: Haskell2010
@@ -67,6 +68,7 @@ executable ogma-gen
     , containers
     , directory
     , filepath
+    , hashable
     , http-client
     , http-conduit
     , http-types
@@ -90,6 +92,7 @@ test-suite ogma-test
   build-depends:
       base
     , bytestring
+    , hashable
     , ogma
     , string-interpolate
     , text
